--- a/sass/tictactoe.scss
+++ b/sass/tictactoe.scss
@@ -193,6 +193,34 @@ main {
   }
 }
 
+#socialbuttons {
+  width: 60%;
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
+  display:flex;
+}
+
+.overlayLogin {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 30;
+  display: block;
+  overflow-x: hidden;
+  overflow-y: auto;
+
+  .overlay {
+    width: 50%;
+    min-height: 50%;
+    background-color: #fff;
+    margin: 10% auto 10% auto;
+    box-shadow: 3px 3px 5px #999;
+    position: relative;
+  }
+}
 // </MAIN>
 
 // <FOOTER>
