--- a/sass/tictactoe.scss
+++ b/sass/tictactoe.scss
@@ -137,6 +137,12 @@ main {
   .ttt_row {
     height: auto;//$ttt_square_height+px; // = same height as width by Bootstrap
   }
+
+  //PLAY-Buttons
+  #play_buttons {
+    margin-left:auto;
+    margin-right:auto;
+  }
   
   
 
