--- a/sass/tictactoe.scss
+++ b/sass/tictactoe.scss
@@ -106,6 +106,7 @@ main {
     :nth-child(3) { margin-left:2px;margin-bottom:2px; }
     :nth-child(4) { margin-right:2px;margin-bottom:2px;margin-top:2px; }
     :nth-child(5) { margin-right:2px;margin-bottom:2px;margin-top:2px;margin-left:2px; }*/
+
   }
   .ttt_square {
     background-color: $ttt_square_bgcolor;
@@ -114,6 +115,9 @@ main {
     border-width: 2px;
     border-color: #000;
     width: 33.3333333%;
+    color:#fff;
+    font-size:100px;
+    text-align:center;
     //margin:4px 4px 4px 4px;
     //Following Transition for: HOVER OUT
     @include transition-property(background-color);
@@ -133,10 +137,12 @@ main {
 	width:100%;
 	height:auto;
 	}
+
   }
   .ttt_row {
     height: auto;//$ttt_square_height+px; // = same height as width by Bootstrap
   }
+
 
   //PLAY-Buttons
   #play_buttons {
