--- a/sass/tictactoe.scss
+++ b/sass/tictactoe.scss
@@ -206,7 +206,7 @@ main {
   }
 }
 
-#socialbuttons {
+/*#socialbuttons {
   width: 60%;
   float: none;
   margin-left: auto;
@@ -234,6 +234,15 @@ main {
     box-shadow: 3px 3px 5px #999;
     position: relative;
   }
+}*/
+
+body {
+  padding: 30px 0px;
+}
+
+#lightbox .modal-content {
+  display: inline-block;
+  text-align: center;
 }
 // </MAIN>
 
