--- a/sass/tictactoe.scss
+++ b/sass/tictactoe.scss
@@ -38,7 +38,7 @@ $h3_talign: $h1_talign;
 
 // ------------------------------- INDEX.PHP ---------------------------------------------
 //GENERAL
-span.show {
+span.show_label {
   display: inline-block;
 }
 
