--- a/sass/tictactoe.scss
+++ b/sass/tictactoe.scss
@@ -199,6 +199,11 @@ main {
     /*margin-left:auto;
     margin-right:auto;*/
   }
+
+  #bt_difficulty {
+    background-size: 100%;
+    background: url('/images/skull_difficulty.png') no-repeat !important; //TODO: Icon does not appear
+  }
   
   
 
